Got /list working, using getters in the Employee class